mise en place de l'application

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
         <header class="app-header">
             <div class="logo">
                 <h1>Alezia AI</h1>
-                <span class="tagline">Jeu de rôle avec IA non censurée</span>
+                <span class="tagline">Jeu de rôle avec IA</span>
             </div>
             <nav class="main-nav">
                 <ul>
