--- a/frontend/index.html
+++ b/frontend/index.html
@@ -141,6 +141,6 @@
 
     <!-- Scripts -->
     <script src="assets/js/api.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
